UI: Increase z-index for custom modals to avoid stacking issues

--- a/static/style.css
+++ b/static/style.css
@@ -2059,7 +2059,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 2000;
+    z-index: 30000;
     display: none;
     align-items: center;
     justify-content: center;
